# fastapi_shop

./: .env  .env_example  .env_prod  .gitignore  Dockerfile  README.md  alembic.ini  alembic.sh  docker-compose.yml  items_views.py  main.py  pyproject.toml  requirements.txt  test.sqlite3  tree.txt
alembic/: env.py
alembic/versions/: 2023_11_20_1826-b281ea5b4683_initial_migration.py  2023_11_21_0954-39dd97eeb429_created_user.py  2023_11_21_1018-46974cb7634f_created_post.py  2023_11_21_1055-d5d4713492e6_created_profile.py  2023_12_01_1417-b934eb8fc918_created_links.py  2023_12_02_1044-631c33bbf432_added_new_relationships.py  2023_12_02_1144-d803a73a1baa_created_order_model.py  2023_12_02_1211-62ea12c02dd7_created_order_product_link_table.py  2023_12_02_1333-6e9e0b43e54d_added_count_column.py  2023_12_05_1749-427677ae1823_update_user_model.py  2023_12_07_1822-97a3c2fe5ec2_created_chat_model.py  2023_12_29_1206-e6ee993f206c_added_cascade.py  2023_12_29_1211-32f497332d30_delete_relationship_between_user_and_.py  2023_12_29_1222-2a2e1ff7d3bc_ondelete_added.py  2024_01_25_1936-9d074f183e58_creating_tables.py
api_v1/: __init__.py
api_v1/posts/: crud.py  schemas.py  views.py
api_v1/products/: crud.py  schemas.py
apps/: __init__.py
core/: config.py  database.py  pika_client.py  test_database.py
docker/: alembic.sh  app.sh  celery.sh  migration.sh
tasks/: mail.py
templates/: users.html
test/: conftest.py  test_product.py  test_user.py  tests_user.py
tests/: conftests.py  test_auth.py  test_post.py  test_products.py  test_routes.py  tests_users.py
users/: crud.py  schemas.py  views.py
(+59 files in other folders)
