[tool.poetry]
name = "fastapi-shop"
version = "0.1.0"
description = "FastAPI shop"
authors = ["timmashkov <bodomizer#yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
alembic = "1.13.0"
fastapi-users-db-sqlalchemy = "6.0.1"
black = "23.11.0"
asyncpg = "0.29.0"
annotated-types = "0.6.0"
anyio = "3.7.1"
bcrypt = "4.0.1"
certifi = "2023.7.22"
cffi = "1.16.0"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "41.0.5"
dnspython = "2.4.2"
email-validator = "2.0.0.post2"
fastapi-users = "12.1.2"
greenlet = "3.0.1"
h11 = "0.14.0"
httpcore = "1.0.2"
httptools = "0.6.1"
httpx = "0.25.1"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
makefun = "1.15.2"
mako = "1.3.0"
markupsafe = "2.1.3"
mypy-extensions = "1.0.0"
orjson = "3.9.10"
packaging = "23.2"
passlib = "1.7.4"
pathspec = "0.11.2"
platformdirs = "4.0.0"
pycparser = "2.21"
pydantic = "2.5.2"
pydantic-extra-types = "2.1.0"
pydantic-settings = "2.1.0"
pydantic-core = "2.14.5"
pyjwt = "2.8.0"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pyyaml = "6.0.1"
setuptools = "69.0.2"
sniffio = "1.3.0"
sqlalchemy = "2.0.23"
starlette = "0.27.0"
typing-extensions = "4.8.0"
ujson = "5.8.0"
uvicorn = "0.24.0.post1"
watchfiles = "0.21.0"
websockets = "12.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
aiosqlite = "^0.19.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.pytest.ini_options]
pythonpath = [
  ".", "apps",
]
asyncio_mode="auto"
